# epaper-idf

./: CMakeLists.txt  README.md  sdkconfig
components/Adafruit-GFX/: CMakeLists.txt
components/GxEPD/: Adafruit_Sensor.cpp  CMakeLists.txt  GxEPD.cpp  GxFont_GFX.cpp  GxGDEH0154D67.cpp  WString.cpp
components/GxEPD/include/: Arduino.h  BitmapExamples.h  Esp.h  GxEPD.h  GxFont_GFX.h  GxGDEH0154D67.h  StreamString.h  WString.h
components/bme280/: CMakeLists.txt  bme280.c
components/ds18b20/: CMakeLists.txt
main/: Adafruit_BME280.cpp  Adafruit_BME280.h  Adafruit_BMP280.h  CMakeLists.txt  main.cpp  mqtt.c  mqtt.h  wifi.c
