set(srcs 
"GxEPD.cpp"
"GxFont_GFX.cpp"
"GxGDEH0154D67.cpp"
"GxIO_SPI.cpp"
"GxIO.cpp"
"HardwareSerial.cpp"
"SPI.cpp"
"Stream.cpp"
"StreamString.cpp"
"WMath.cpp"
"WString.cpp"
"Wire.cpp"
"Adafruit_Sensor.cpp"

"esp32-hal-adc.c"
"esp32-hal-bt.c"
"esp32-hal-cpu.c"
"esp32-hal-dac.c"
"esp32-hal-gpio.c"
"esp32-hal-i2c.c"
"esp32-hal-ledc.c"
"esp32-hal-log.c"
"esp32-hal-matrix.c"
"esp32-hal-misc.c"
"esp32-hal-psram.c"
"esp32-hal-rmt.c"
"esp32-hal-sigmadelta.c"
"esp32-hal-spi.c"
"esp32-hal-time.c"
"esp32-hal-timer.c"
"esp32-hal-touch.c"
"esp32-hal-uart.c"
"stdlib_noniso.c"
)

idf_component_register(SRCS ${srcs}
                    INCLUDE_DIRS "include" 
                    REQUIRES "Adafruit-GFX"
                    REQUIRES "spi_flash"
                    REQUIRES "esp_adc_cal"
                    REQUIRES "nvs_flash"
                    REQUIRES "soc"
                    )